k8s/data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data
  template:
    metadata:
      labels:
        app: data
    spec:
      containers:
        - name: data
          image: adwera/ts-fileupload-data
---

apiVersion: v1
kind: Service
metadata:
  name: data-service
spec:
  selector:
    app: data
  ports:
    - name: data
      protocol: TCP
      port: 5002
      targetPort: 5002
