k8s/data-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-mongo
  template:
    metadata:
      labels:
        app: data-mongo
    spec:
      volumes:
        - name: ts-fileupload-data-mongo-storage
          persistentVolumeClaim:
            claimName: ts-fileupload-database-pvc
      containers:
        - name: data-mongo
          image: mongo
          volumeMounts:
            - mountPath: /data/db
              name: ts-fileupload-data-mongo-storage
        
---
apiVersion: v1
kind: Service
metadata:
  name: data-mongo-service
spec:
  selector:
    app: data-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
