k8s/etl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etl-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etl
  template:
    metadata:
      labels:
        app: etl
    spec:
      containers:
        - name: etl
          image: adwera/ts-fileupload-etl
---

apiVersion: v1
kind: Service
metadata:
  name: etl-service
spec:
  selector:
    app: etl
  ports:
    - name: etl
      protocol: TCP
      port: 5001
      targetPort: 5001
