k8s/etl-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etl-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etl-mongo
  template:
    metadata:
      labels:
        app: etl-mongo
    spec:
      containers:
        - name: etl-mongo
          image: mongo
        
---
apiVersion: v1
kind: Service
metadata:
  name: etl-mongo-service
spec:
  selector:
    app: etl-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
