k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-fileupload-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ts-fileupload.io
      http:
        paths:
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5000
          - path: /etl/?(.*)
            pathType: Prefix
            backend:
              service:
                name: etl-service
                port:
                  number: 5001
          - path: /data/?(.*)
            pathType: Prefix
            backend:
              service:
                name: data-service
                port:
                  number: 5002
